# query_tool

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml  query_tool.py
analysis/: analysis.ipynb
config/: .env.example  bigquery_credentials.json  snowflake_config.json
input_data/:  product_data.csv
queries/: bigquery_query.sql  bigquery_tables.sql  snowflake_query.sql  snowflake_tables.sql
src/: main.py  query_tool.py  utils.py
